# oolong

./: .gitignore  CMakeLists.txt  GRAMMAR  Makefile  README.md  clean.sh  compile.sh  make.sh
samples/: conversions.ool  error.ool  fibonacci-simple.ool  fibonacci-with-cache.ool  fibonacci.ddy  fibonacci.ool  for-loop.ool  function-redefinition.ool  hello-world.ddy  hello-world.ool  if-else-else-statement.ool  if-else-statement.ool  if-statement.ool  loop.ool  modify-assign-operators.ool  nested-loop.ool  repeat.ool  return-17.ool  return-conditional.ool  return-modulus.ool  type-error.ool  unreachable.ool
src/: abstract-syntax-tree.cpp  abstract-syntax-tree.h  code-generation.cpp  code-generation.h  common.cpp  common.h  importer.cpp  importer.h  node.cpp  node.h  oolong.cpp  oolong.h.in  parser.y  tokens.l  type-converter.cpp  type-converter.h
src/package/: default.c  io.c  oolong-module.h
